fixed text overflow for long tweet w/ no spaces. Used to run off the container. Now scroll is enabled.

--- a/public/styles/displayTweet.css
+++ b/public/styles/displayTweet.css
@@ -59,6 +59,8 @@ main article span{
   display: block;
   padding-left: 15px;
   padding-top: 50px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 
